Python data type

--- a/Numpy_and_Pandas_for_Beginners.html
+++ b/Numpy_and_Pandas_for_Beginners.html
@@ -13366,18 +13366,15 @@ dict_values([Int64Index([2, 6], dtype=&#39;int64&#39;), Int64Index([3, 7], dtype
 </div>
 
 </div>
-<div class="cell border-box-sizing code_cell rendered">
-<div class="input">
-<div class="prompt input_prompt">In&nbsp;[&nbsp;]:</div>
+<div class="cell border-box-sizing text_cell rendered">
+<div class="prompt input_prompt">
+</div>
 <div class="inner_cell">
-    <div class="input_area">
-<div class=" highlight hl-ipython3"><pre><span></span> 
-</pre></div>
+<div class="text_cell_render border-box-sizing rendered_html">
+<p>$e^{i\pi} + 1 =0$</p>
 
 </div>
 </div>
-</div>
-
 </div>
     </div>
   </div>
