Scikit-learn Iris

--- a/Python_Scikit-learn.html
+++ b/Python_Scikit-learn.html
@@ -11773,12 +11773,46 @@ div#notebook {
   <div tabindex="-1" id="notebook" class="border-box-sizing">
     <div class="container" id="notebook-container">
 
+<div class="cell border-box-sizing text_cell rendered">
+<div class="prompt input_prompt">
+</div>
+<div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<p><h3 style="color: blue">KNN Classifier - IRIS</h3></p>
+<p><h4 style="color: red">Processes:</h4></p>
+<ol>
+    <li>
+        <b>Import module:</b> 
+        <ul><li>datasets, train_test_split, KNeighborsClassifier</li></ul>
+    </li>
+    <li>
+        <b>Create Data:</b>
+        <ul>
+            <li>classes, labels</li>
+            <li>Data set --> training set/data, testing set/data</li>
+        </ul>
+    </li>
+    <li>
+        <b>Create Model:</b>
+        <ul>
+            <li>fit, predict</li>
+        </ul>
+    </li>
+    <li>
+        <b>Visualization</b>
+    </li>
+</ol>
+</div>
+</div>
+</div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
 <div class="prompt input_prompt">In&nbsp;[&nbsp;]:</div>
 <div class="inner_cell">
     <div class="input_area">
-<div class=" highlight hl-ipython3"><pre><span></span> 
+<div class=" highlight hl-ipython3"><pre><span></span><span class="kn">import</span> <span class="nn">numpy</span> <span class="k">as</span> <span class="nn">np</span>
+<span class="kn">from</span> <span class="nn">sklearn</span> <span class="k">import</span> <span class="n">datasets</span>
+<span class="kn">from</span> <span class="nn">sklearn.cross_validation</span> <span class="k">import</span> <span class="n">train_test_split</span>
 </pre></div>
 
 </div>
