--- a/Python_Scikit-learn.html
+++ b/Python_Scikit-learn.html
@@ -11846,6 +11846,22 @@ part of the available data as a <b>test set</b> <em>X_test, y_test</em>.</p>
 </div>
 </div>
 </div>
+<div class="cell border-box-sizing text_cell rendered">
+<div class="prompt input_prompt">
+</div>
+<div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<p><h4 style='color: green'>sklearn.neighbors:</h4></p>
+<p><h5>It provides functionality for unsupervised and supervised neighbors-based learning methods.</h5></p>
+<p>
+    <b>Unsupervised nearest neighbors:</b> It's the foundation of many other learning methods, notably        manifold learning and spectral clustering.
+</p>
+<p>
+    <b>Supervised neighbors-based learning:</b> It comes in two flavors: <em style='color: red'>classification</em> for data with discrete labels, and <em style='color: red'>regression</em> for data with continuous labels.
+</p>
+</div>
+</div>
+</div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
 <div class="prompt input_prompt">In&nbsp;[&nbsp;]:</div>
