--- a/Python_Scikit-learn.html
+++ b/Python_Scikit-learn.html
@@ -11811,7 +11811,7 @@ div#notebook {
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
 <p><h4 style="color: green">sklear.cross_validation:</b></h4></p>
-<p><h5>train_test_split(*array, **options):</h5></p>
+<p><h5><li>train_test_split(*array, **options):</li></h5></p>
 <p><p>To avoid <b>overfitting</b>, it is common practice when performing a (supervised) machine learning experiment to hold out
 part of the available data as a <b>test set</b> <em>X_test, y_test</em>.</p>
 <table align='left'>
@@ -11822,7 +11822,8 @@ part of the available data as a <b>test set</b> <em>X_test, y_test</em>.</p>
                 <li><b>*arrays:</b> Allowed inputs are lists, numpy arrays, scipy-sparse matrices or pandas dataframes</li>
                 <li><b>test_size:</b> float, int, None, optional</li>
                 <li><b>train_size:</b> float, int, None, default None</li>
-                <li><b>random_state:</b> int, RandomState instance or None, optional(default=None)</li>
+                <li>
+                   <b>random_state:</b> int, RandomState instance or None, optional(default=None)                     </li>
                 <li>
                     <b>shuffle:</b> boolean, optional(default=True)
                     <p style='margin-top: 0; text-indent: 40px'>Whether or not to shuffle the data before splitting. If shuffle=False then stratify must be None.</p>
@@ -11852,25 +11853,240 @@ part of the available data as a <b>test set</b> <em>X_test, y_test</em>.</p>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
 <p><h4 style='color: green'>sklearn.neighbors:</h4></p>
-<p><h5>It provides functionality for unsupervised and supervised neighbors-based learning methods.</h5></p>
+<p><h5>&emsp;It provides functionality for unsupervised and supervised neighbors-based learning methods.</h5></p>
 <p>
-    <b>Unsupervised nearest neighbors:</b> It's the foundation of many other learning methods, notably        manifold learning and spectral clustering.
+    &emsp;(The principle behind nearest neighbor methods is to find a predefined number of training       samples closest in distance to the new point, and predict the label from these.)
 </p>
 <p>
-    <b>Supervised neighbors-based learning:</b> It comes in two flavors: <em style='color: red'>classification</em> for data with discrete labels, and <em style='color: red'>regression</em> for data with continuous labels.
+    &emsp;<b>Unsupervised nearest neighbors:</b> It's the foundation of many other learning methods,       notably manifold learning and spectral clustering.
+</p>
+<p>
+    &emsp;<b>Supervised neighbors-based learning:</b> It comes in two flavors: <em style='color:      red'>classification</em> for data with discrete labels, and <em style='color: red'>regression</em> for data with continuous labels.
 </p>
 </div>
 </div>
+</div>
+<div class="cell border-box-sizing text_cell rendered">
+<div class="prompt input_prompt">
+</div>
+<div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<p><li>
+    <em>sklearn.neighbors.<b>KNeighborsClassifier</b></em>(n_neighbors=5, weights='uniform', algorithm='auto', leaf_size=30, p=2,, metric='minkowski', metric_params=None, n_jobs=1, **kwargs):
+</li></p>
+<p>Classifier implementing the k-nearest neighbors vote.</p><table align='left'>
+    <tr>
+        <th style='border: solid 2px black'>Parameters:</th>
+        <td style='text-align: left; border: solid 2px black'>
+            <ul style='list-style: none; line-height: 2.5rem'>
+                <li>
+                    <b>n_neighbors:</b> int, optional (default=5)
+                    <br>
+                    &nbsp; Number of neighbors to use by default for <em>kneighbors</em> queries.
+                </li>
+                <li>
+                    <b>weights:</b> str or callable, optional (default = 'uniform')
+                    <br>
+                    &nbsp;
+                    weight function in prediciton.
+                    <ul>
+                        <li>'uniform'</li>
+                        <li>'distance'</li>
+                        <li>[callable]</li>
+                    </ul>
+                </li>
+                <li>
+                    <b>algorithm:</b> {'auto', 'ball_tree', 'kd_tree', 'brute'}, optional
+                    <br>
+                    &nbsp; 
+                    Algorithm used to compute the nearest neighbors:
+                    <ul>
+                        <li>'ball_tree' will use <em>BallTree</em></li>
+                        <li>'kd_tree' will use <em>KDTree</em></li>
+                        <li>'brute' will use a brute-force search</li>
+                        <li>'auto' will attempt to decide the most appropriate algorithm</li>
+                    </ul>
+                </li>
+                <li>
+                    <b>leaf_size:</b> int, optional (default = 30)
+                    <br>
+                    &nbsp;
+                    Leaf size passed to BallTree or KDTree. This can affect the speed of the 
+                    construction and query, as well as the memory required to store the tree.
+                </li>
+                <li>
+                    <b>p:</b> string or callable, default 'minkowski'
+                    &nbsp;
+                    Power parameter for the Minkowski metric
+                    <ul>
+                        <li>p = 1: manhattan_distance(l1)</li>
+                        <li>p = 2: euclidean_distance(l2)</li>
+                        <li>p = arbitrary: minkowski_distance(l_p)</li>
+                    </ul>
+                </li>
+                <li>
+                    <b>metric:</b> string or callable, default 'minkowski'
+                    &nbsp;
+                    The distance metric to use for the tree
+                </li>
+                <li>
+                    <b>metric_params:</b> dict, optional (default = None)
+                    &nbsp;
+                    Additional keyword arguments for the metric function
+                </li>
+                <li>
+                    <b>n_jobs:</b> int, optional (default = 1)
+                    &nbsp;
+                    The number of parallel jobs to run for neighbors search
+                </li>
+            </ul>  
+        </td>
+    </tr>
+</table>
+</div>
+</div>
+</div>
+<div class="cell border-box-sizing text_cell rendered">
+<div class="prompt input_prompt">
+</div>
+<div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<p><h4 style='color:green'>sklearn.prepocessing:</h4></p>
+<p><h5>
+    &emsp;It provides several common utility functions and transformer classes to change raw feature vectors
+    into a representation that is more suitable for the downstream estimators.
+</h5></p>
+<p>
+    &emsp;Learning algorithms benefit from standardization of the data set. (ex: dealing with outliers)
+</p>
+</div>
+</div>
+</div>
+<div class="cell border-box-sizing text_cell rendered">
+<div class="prompt input_prompt">
+</div>
+<div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<p><li>sklearn.preprocessing.<b>StandardScaler</b>(copy=True, with_mean=True, with_std=True)</li></p>
+<p>&emsp;Standardize features by removing the mean and scalling to unit variance. (normally distributed data, ex: Gaussian with 0 mean and unit variance)</p>
+<p>&emsp;Centering and scaling happen independently on each feature by computing the relevant statistics on the samples in the training set. Mean and standard deviation are then stored to be used on later data using the transformer method.</p><table align='left'>
+    <tr style='border: solid 2px black'>
+        <th style='border: solid 2px black'>Parameters:</th>
+        <td>
+            <ul style='list-style:none; text-align: left; line-height: 2.5rem'>
+                <li>
+                    <b>copy:</b> boolean, optional, default True
+                </li>
+                <li>
+                    <b>with_mean:</b> boolean, default True
+                    <br>
+                    &nbsp; 
+                    If True, center the data before scaling.
+                </li>
+                <li>
+                    <b>with_std:</b> boolean, default True
+                    <br>
+                    &nbsp; 
+                    If True, scale the data to unit variance (or equivalently, unit standard
+                    deviation)
+                </li>
+            </ul>
+        </td>
+    </tr>
+    <tr style='border: solid 2px black'>
+        <th style='border: solid 2px black'>Attributes</th>
+        <td>
+            <ul style='list-style: none; text-align: left; line-height: 2.5rem'>
+                <li>
+                    <b>scale_:</b> ndarray, shape[n_features]
+                    <br>
+                    &nbsp;
+                    Per feature relative scaling of the data
+                </li>
+                <li>
+                    <b>mean_:</b> array of floats with shape [n_features]
+                    <br>
+                    &nbsp;
+                    The mean value for each feature in the training set.
+                </li>
+                <li>
+                    <b>var_:</b> array of floats with shape [n_features]
+                    <br>
+                    &nbsp;
+                    The variance for each feature in the training set
+                </li>
+                <li>
+                    <b>n_samples_seen:</b> int
+                    <br>
+                    &nbsp;
+                    The number of samples processed by the estimator.
+                </li>
+            </ul>
+        </td>
+    </tr>
+</table>
+</div>
+</div>
+</div>
+<div class="cell border-box-sizing code_cell rendered">
+<div class="input">
+<div class="prompt input_prompt">In&nbsp;[24]:</div>
+<div class="inner_cell">
+    <div class="input_area">
+<div class=" highlight hl-ipython3"><pre><span></span><span class="kn">import</span> <span class="nn">numpy</span> <span class="k">as</span> <span class="nn">np</span>
+<span class="kn">from</span> <span class="nn">sklearn</span> <span class="k">import</span> <span class="n">datasets</span>
+<span class="kn">from</span> <span class="nn">sklearn.model_selection</span> <span class="k">import</span> <span class="n">train_test_split</span>
+<span class="kn">from</span> <span class="nn">sklearn.neighbors</span> <span class="k">import</span> <span class="n">KNeighborsClassifier</span>
+<span class="kn">from</span> <span class="nn">sklearn.preprocessing</span> <span class="k">import</span> <span class="n">StandardScaler</span>
+<span class="kn">import</span> <span class="nn">matplotlib.pyplot</span> <span class="k">as</span> <span class="nn">plt</span>
+</pre></div>
+
+</div>
+</div>
+</div>
+
+</div>
+<div class="cell border-box-sizing code_cell rendered">
+<div class="input">
+<div class="prompt input_prompt">In&nbsp;[30]:</div>
+<div class="inner_cell">
+    <div class="input_area">
+<div class=" highlight hl-ipython3"><pre><span></span><span class="n">iris</span> <span class="o">=</span> <span class="n">datasets</span><span class="o">.</span><span class="n">load_iris</span><span class="p">()</span>
+<span class="c1"># print(iris)</span>
+<span class="nb">print</span><span class="p">(</span><span class="n">iris</span><span class="o">.</span><span class="n">target_names</span><span class="p">)</span>
+<span class="nb">print</span><span class="p">(</span><span class="n">iris</span><span class="o">.</span><span class="n">feature_names</span><span class="p">)</span>
+<span class="n">iris_X</span> <span class="o">=</span> <span class="n">iris</span><span class="o">.</span><span class="n">data</span>
+<span class="n">iris_y</span> <span class="o">=</span> <span class="n">iris</span><span class="o">.</span><span class="n">target</span>
+</pre></div>
+
+</div>
+</div>
+</div>
+
+<div class="output_wrapper">
+<div class="output">
+
+
+<div class="output_area">
+<div class="prompt"></div>
+
+<div class="output_subarea output_stream output_stdout output_text">
+<pre>[&#39;setosa&#39; &#39;versicolor&#39; &#39;virginica&#39;]
+[&#39;sepal length (cm)&#39;, &#39;sepal width (cm)&#39;, &#39;petal length (cm)&#39;, &#39;petal width (cm)&#39;]
+</pre>
+</div>
+</div>
+
+</div>
+</div>
+
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
 <div class="prompt input_prompt">In&nbsp;[&nbsp;]:</div>
 <div class="inner_cell">
     <div class="input_area">
-<div class=" highlight hl-ipython3"><pre><span></span><span class="kn">import</span> <span class="nn">numpy</span> <span class="k">as</span> <span class="nn">np</span>
-<span class="kn">from</span> <span class="nn">sklearn</span> <span class="k">import</span> <span class="n">datasets</span>
-<span class="kn">from</span> <span class="nn">sklearn.cross_validation</span> <span class="k">import</span> <span class="n">train_test_split</span>
-<span class="kn">from</span> <span class="nn">sklearn.neighbors</span> <span class="k">import</span> <span class="n">KNeighborsClassifier</span>
+<div class=" highlight hl-ipython3"><pre><span></span><span class="n">X_train</span><span class="p">,</span> <span class="n">X_test</span><span class="p">,</span> <span class="n">y_train</span><span class="p">,</span> <span class="n">y_test</span> <span class="o">=</span> <span class="n">train_test_split</span><span class="p">(</span><span class="n">iris_X</span><span class="p">,</span> <span class="n">iris_y</span><span class="p">,</span> <span class="n">test_size</span><span class="o">=</span><span class="mf">0.3</span><span class="p">)</span>
 </pre></div>
 
 </div>
