--- a/Python_Scikit-learn_NBA_unsupervised.html
+++ b/Python_Scikit-learn_NBA_unsupervised.html
@@ -11798,15 +11798,203 @@ data. The goal of this algorithm is to find groups in the data, with the number 
 </div>
 </div>
 </div>
+<div class="cell border-box-sizing text_cell rendered">
+<div class="prompt input_prompt">
+</div>
+<div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<p><h4 style='color: red'>sklearn.metrics:</h4></p>
+<p>The <em>sklearn.metrics</em> module includes score functions, performance metrics and pairwise
+metrics and distance computations</p><p style='color: blue'>sklearn.metrics.<b>silhouette_samples</b>(X, labels, metric='euclidean', **kwds)</p>
+<p>Compute the Silhouette Coefficient for each sample.</p><p>The Silhouette Coefficient is a measure of how well samples are clustered with the samples  that are similar to themselves.</p><p>Clustering models with high Silhouette Coefficient are said to be dense, where samples in the same cluster are similiar to each other, and well separated, where samples in different clusters are  not very similar to each other.</p><p><p>The Silhouette Coefficient is calculated using the mean intra-cluster distance (<mark>a</mark>) and the mean nearest-cluster distance (<mark>b</mark>) for each sample. The Silhouette Coefficient for a sample is <mark>(b-a)/max(a,b)</mark>.</p>
+
+</div>
+</div>
+</div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[&nbsp;]:</div>
+<div class="prompt input_prompt">In&nbsp;[1]:</div>
 <div class="inner_cell">
     <div class="input_area">
-<div class=" highlight hl-ipython3"><pre><span></span> 
+<div class=" highlight hl-ipython3"><pre><span></span><span class="c1"># import packages</span>
+<span class="kn">from</span> <span class="nn">sklearn</span> <span class="k">import</span> <span class="n">datasets</span>
+<span class="kn">from</span> <span class="nn">sklearn.cluster</span> <span class="k">import</span> <span class="n">KMeans</span>
+<span class="kn">from</span> <span class="nn">sklearn.metrics</span> <span class="k">import</span> <span class="n">silhouette_samples</span>
+<span class="kn">from</span> <span class="nn">sklearn.preprocessing</span> <span class="k">import</span> <span class="n">StandardScaler</span>
+<span class="kn">import</span> <span class="nn">matplotlib.pyplot</span> <span class="k">as</span> <span class="nn">plt</span>
+<span class="kn">from</span> <span class="nn">matplotlib</span> <span class="k">import</span> <span class="n">cm</span>
+<span class="kn">import</span> <span class="nn">numpy</span> <span class="k">as</span> <span class="nn">np</span>
+<span class="kn">import</span> <span class="nn">pandas</span> <span class="k">as</span> <span class="nn">pd</span>
+<span class="kn">from</span> <span class="nn">scipy.spatial.distance</span> <span class="k">import</span> <span class="n">pdist</span><span class="p">,</span><span class="n">squareform</span>
+<span class="kn">from</span> <span class="nn">scipy.cluster.hierarchy</span> <span class="k">import</span> <span class="n">linkage</span>
+<span class="kn">from</span> <span class="nn">scipy.cluster.hierarchy</span> <span class="k">import</span> <span class="n">dendrogram</span>
 </pre></div>
 
 </div>
+</div>
+</div>
+
+</div>
+<div class="cell border-box-sizing code_cell rendered">
+<div class="input">
+<div class="prompt input_prompt">In&nbsp;[10]:</div>
+<div class="inner_cell">
+    <div class="input_area">
+<div class=" highlight hl-ipython3"><pre><span></span><span class="n">df</span> <span class="o">=</span> <span class="n">pd</span><span class="o">.</span><span class="n">read_csv</span><span class="p">(</span><span class="s1">&#39;player_traditional.csv&#39;</span><span class="p">)</span>
+<span class="c1"># print(df.columns)</span>
+<span class="c1"># print(df.index)</span>
+<span class="c1"># print(df)</span>
+<span class="n">X</span> <span class="o">=</span> <span class="n">df</span><span class="o">.</span><span class="n">iloc</span><span class="p">[:,</span><span class="mi">2</span><span class="p">:]</span>
+<span class="nb">print</span><span class="p">(</span><span class="n">X</span><span class="p">)</span>
+</pre></div>
+
+</div>
+</div>
+</div>
+
+<div class="output_wrapper">
+<div class="output">
+
+
+<div class="output_area">
+<div class="prompt"></div>
+
+<div class="output_subarea output_stream output_stdout output_text">
+<pre>Index([&#39;PLAYER&#39;, &#39;Conference&#39;, &#39;MIN&#39;, &#39;PTS&#39;, &#39;FGM&#39;, &#39;FGA&#39;, &#39;FG%&#39;, &#39;3PM&#39;, &#39;3PA&#39;,
+       &#39;3P%&#39;, &#39;FTM&#39;, &#39;FTA&#39;, &#39;FT%&#39;, &#39;OREB&#39;, &#39;DREB&#39;, &#39;REB&#39;, &#39;AST&#39;, &#39;TOV&#39;, &#39;STL&#39;,
+       &#39;BLK&#39;, &#39;PF&#39;, &#39;DD2&#39;, &#39;TD3&#39;, &#39;+/-&#39;],
+      dtype=&#39;object&#39;)
+      MIN   PTS   FGM   FGA   FG%  3PM  3PA   3P%  FTM  FTA ...   DREB   REB  \
+0     7.4   2.2   0.8   1.9  40.5  0.2  0.5  50.0  0.4  0.9 ...    1.3   1.6   
+1    13.7   5.0   1.9   4.6  40.3  0.7  2.0  37.5  0.5  0.6 ...    0.8   1.1   
+2    28.7  12.7   4.9  10.8  45.4  1.0  3.3  28.8  2.0  2.7 ...    3.6   5.1   
+3     3.3   0.2   0.0   0.8   0.0  0.0  0.4   0.0  0.2  0.4 ...    0.6   0.6   
+4     7.5   3.5   1.3   3.0  42.6  0.2  0.8  20.0  0.8  1.1 ...    1.3   1.8   
+5    32.3  14.0   5.6  11.8  47.3  1.3  3.6  35.5  1.6  2.0 ...    5.4   6.8   
+6    14.1   8.1   3.6   7.1  49.9  0.0  0.0   0.0  1.0  1.3 ...    3.1   4.2   
+7    29.1   8.7   3.0   7.6  39.3  1.1  3.5  33.0  1.6  2.2 ...    6.1   7.4   
+8    10.3   2.9   1.0   2.7  37.5  0.5  1.5  31.8  0.4  0.5 ...    0.7   0.8   
+9    15.1   7.4   2.9   5.7  51.7  0.0  0.0   0.0  1.5  2.4 ...    4.2   6.2   
+10   15.5   6.7   2.4   5.9  39.9  0.6  1.8  32.9  1.4  1.9 ...    2.5   2.9   
+11   15.5   6.0   2.0   5.0  39.3  1.4  3.6  38.1  0.6  0.7 ...    1.0   1.3   
+12   20.3   8.0   3.0   6.0  49.7  0.0  0.2  25.0  1.9  2.7 ...    4.6   6.6   
+13   26.1  10.7   4.2   9.0  46.3  1.0  3.2  31.6  1.3  1.7 ...    3.0   4.8   
+14   15.0   5.3   2.3   4.6  50.0  0.0  0.1   0.0  0.7  1.0 ...    3.4   4.5   
+15   28.5  10.7   3.8   8.2  46.8  1.7  3.8  44.4  1.3  1.6 ...    2.6   2.9   
+16    6.9   0.8   0.2   1.1  21.4  0.0  0.2   0.0  0.4  0.7 ...    0.8   1.2   
+17   20.1   6.5   2.7   4.6  57.6  0.3  0.8  40.9  0.8  1.3 ...    3.1   4.6   
+18    6.6   1.3   0.4   1.0  35.7  0.0  0.0   0.0  0.6  0.8 ...    1.1   1.9   
+19   29.7  13.6   6.0  11.2  53.0  0.0  0.1  28.6  1.7  4.4 ...    9.5  13.8   
+20   26.3   7.6   2.9   5.5  52.8  0.8  2.3  36.2  0.9  1.3 ...    3.3   4.0   
+21   30.1   6.6   2.7   5.9  46.4  0.6  2.3  24.5  0.6  1.4 ...    3.9   5.1   
+22   21.6   2.9   1.4   3.0  46.9  0.0  0.0   0.0  0.1  0.4 ...    6.0   8.1   
+23   20.5   5.9   1.6   5.0  32.5  0.6  2.2  27.6  2.1  2.7 ...    1.6   1.9   
+24    9.0   2.6   1.1   2.9  38.7  0.1  0.7  18.5  0.2  0.4 ...    1.2   1.6   
+25   37.2  23.6   8.6  19.1  45.2  1.3  3.5  35.6  5.0  6.6 ...    2.8   4.0   
+26   11.5   5.0   1.7   4.0  41.3  0.6  2.1  27.1  1.1  1.6 ...    2.3   3.4   
+27   14.5   3.9   1.6   4.5  36.0  0.6  2.5  25.9  0.0  0.0 ...    2.3   3.0   
+28   36.1  28.0  10.3  20.3  50.5  0.5  1.8  29.9  6.9  8.6 ...    9.5  11.8   
+29   14.6   5.5   2.0   5.1  38.9  0.8  2.7  30.8  0.7  0.8 ...    0.4   0.6   
+..    ...   ...   ...   ...   ...  ...  ...   ...  ...  ... ...    ...   ...   
+456  12.3   5.0   2.0   4.5  45.5  0.5  1.2  44.3  0.4  0.5 ...    0.7   0.8   
+457  16.3   6.2   2.2   6.2  36.2  0.9  2.9  31.9  0.8  1.1 ...    2.6   3.3   
+458  30.0   8.1   3.4   5.6  60.0  0.0  0.0   0.0  1.4  2.7 ...    5.5   9.2   
+459  17.7   8.2   2.8   7.4  37.4  2.1  5.3  38.9  0.6  0.8 ...    1.2   1.5   
+460  18.6   6.2   2.4   5.6  43.7  0.6  2.1  29.0  0.7  1.1 ...    1.8   2.3   
+461  25.1   9.9   3.4   7.6  45.4  0.5  1.7  28.8  2.5  3.1 ...    2.0   2.6   
+462  11.1   4.3   1.7   3.9  43.3  0.5  1.3  38.6  0.4  0.5 ...    0.7   0.8   
+463  29.8  13.7   4.9  11.3  43.3  1.3  3.4  37.2  2.7  3.5 ...    3.3   4.0   
+464  18.4   7.3   3.0   7.2  42.1  0.3  1.3  26.6  0.9  1.2 ...    1.2   1.6   
+465  10.3   3.5   1.5   3.1  49.4  0.0  0.0   0.0  0.4  0.8 ...    1.6   2.4   
+466  19.7  10.3   3.8   9.3  40.5  1.1  3.0  35.6  1.7  2.3 ...    3.1   3.4   
+467  27.6   8.4   3.3   4.9  67.1  0.0  0.0   0.0  1.9  2.6 ...    8.2  11.5   
+468  12.9   3.5   1.3   3.0  41.4  0.4  1.2  35.6  0.6  0.7 ...    1.0   1.1   
+469   8.1   1.9   0.7   1.4  47.8  0.0  0.2   0.0  0.6  0.9 ...    1.8   2.3   
+470  33.2  15.9   6.1  13.9  44.2  1.9  5.3  36.1  1.7  2.3 ...    3.8   4.3   
+471  24.7   8.0   2.6   6.7  39.4  1.5  4.1  37.8  1.2  1.6 ...    2.6   3.1   
+472  12.3   3.2   1.1   3.5  31.3  0.1  0.7  13.6  0.9  1.1 ...    1.1   1.4   
+473  24.2  10.5   3.7   9.0  41.6  2.4  6.4  37.8  0.6  0.7 ...    1.8   2.1   
+474  16.9   5.1   1.8   4.1  43.1  0.5  2.0  25.0  1.0  1.6 ...    1.1   1.1   
+475  11.9   2.7   1.1   2.9  36.5  0.4  1.7  24.6  0.2  0.3 ...    2.3   2.7   
+476  34.2  13.5   4.6  11.6  39.3  2.4  6.6  36.3  2.0  2.5 ...    3.3   3.5   
+477  28.4  13.7   4.9  11.1  44.3  1.5  3.9  37.0  2.4  3.2 ...    3.4   4.3   
+478  18.9   8.1   3.4   6.4  53.0  0.0  0.0   0.0  1.3  2.0 ...    3.4   4.5   
+479  14.5   5.3   2.3   4.0  56.8  0.0  0.1  25.0  0.7  1.2 ...    2.9   4.7   
+480  18.4   8.2   3.4   6.5  52.9  0.1  0.2  26.7  1.3  1.7 ...    4.6   7.0   
+481  30.9  15.7   6.1  13.2  46.1  1.5  4.6  33.7  2.0  2.7 ...    5.0   6.5   
+482  26.0  10.0   3.5   8.6  40.6  1.5  3.8  38.6  1.6  1.9 ...    2.0   2.4   
+483  37.2  18.9   6.9  15.1  45.9  2.6  6.6  38.7  2.5  3.0 ...    3.0   3.4   
+484  24.5  14.1   5.9  13.2  44.9  0.3  1.3  22.3  1.9  2.6 ...    5.7   8.2   
+485  18.1   6.1   2.3   4.4  53.4  0.0  0.0   0.0  1.4  1.8 ...    3.9   5.9   
+
+     AST  TOV  STL  BLK   PF  DD2  TD3  +/-  
+0    0.2  0.5  0.0  0.6  1.0    0    0 -0.2  
+1    1.9  1.0  0.4  0.1  1.4    0    0 -0.5  
+2    1.9  1.1  0.8  0.5  2.2    7    0 -2.0  
+3    0.6  0.0  0.0  0.0  0.4    0    0 -1.0  
+4    0.4  0.4  0.4  0.4  1.8    0    0  0.6  
+5    5.0  1.7  0.8  1.3  2.0    8    0  3.2  
+6    0.9  0.5  0.3  0.2  1.9    1    0 -1.5  
+7    1.6  1.5  1.0  0.7  1.7    4    0  0.4  
+8    0.4  0.2  0.1  0.0  1.2    0    0 -2.6  
+9    0.5  0.8  0.6  0.7  2.7   15    0  0.0  
+10   0.7  0.8  0.4  0.1  1.2    0    0  0.0  
+11   0.6  0.5  0.5  0.1  1.7    0    0  0.0  
+12   0.6  1.3  0.5  1.3  3.1   11    0 -5.2  
+13   0.8  0.5  0.5  0.3  2.3    0    0 -6.0  
+14   0.3  0.8  0.5  0.6  2.0    1    0 -1.5  
+15   1.2  0.8  0.7  0.3  2.2    0    0 -1.5  
+16   0.5  0.3  0.4  0.1  1.1    0    0 -1.4  
+17   1.8  1.0  0.6  0.8  2.6    0    0  2.6  
+18   0.7  0.6  0.2  0.2  1.1    0    0 -2.1  
+19   1.1  1.9  1.5  1.1  2.9   49    0 -3.4  
+20   3.4  0.8  1.0  0.5  1.3    0    0  6.9  
+21   1.0  0.6  1.2  1.0  2.6    2    0  1.8  
+22   1.8  1.6  0.5  0.9  3.2    0    0 -1.3  
+23   2.8  1.2  0.7  0.3  2.7    0    0 -0.4  
+24   0.3  0.4  0.4  0.2  1.4    0    0 -3.4  
+25   2.3  2.3  1.0  0.4  2.2    1    0 -0.2  
+26   0.5  0.5  0.2  0.1  0.8    0    0 -3.0  
+27   0.7  0.5  0.5  0.1  1.4    0    0  0.4  
+28   2.1  2.4  1.3  2.2  2.2   49    0  0.7  
+29   0.5  0.1  0.5  0.0  0.9    0    0  0.4  
+..   ...  ...  ...  ...  ...  ...  ...  ...  
+456  1.8  0.8  0.2  0.1  0.9    0    0 -2.8  
+457  1.0  0.9  0.4  0.3  1.4    1    0  0.4  
+458  1.0  0.8  0.5  1.1  2.3   19    0  1.7  
+459  0.7  0.7  0.3  0.1  1.3    0    0  1.3  
+460  0.8  1.1  0.9  0.3  2.0    0    0 -2.5  
+461  4.8  1.9  1.1  0.1  1.7    3    1 -2.3  
+462  1.6  0.8  0.5  0.0  1.1    0    0  0.0  
+463  3.2  1.2  1.2  0.6  2.4    0    0  0.5  
+464  3.7  1.3  0.8  0.1  1.2    6    0 -2.3  
+465  0.8  0.4  0.1  0.4  1.2    1    0  0.0  
+466  3.1  1.5  0.9  0.2  1.5    0    0 -3.8  
+467  0.6  1.4  0.7  0.5  2.7   12    0 -1.6  
+468  2.6  0.6  0.8  0.1  0.8    0    0  0.6  
+469  0.4  0.5  0.4  0.1  1.4    0    0 -4.3  
+470  2.6  1.8  1.2  0.3  2.3    3    0  2.6  
+471  1.8  0.7  0.8  0.5  2.2    0    0  2.2  
+472  1.8  1.2  0.5  0.2  1.2    0    0 -4.2  
+473  1.1  0.5  0.6  0.1  1.1    0    0  1.4  
+474  0.9  0.9  0.4  0.1  1.3    0    0 -3.0  
+475  0.3  0.3  0.4  0.4  1.2    0    0 -0.8  
+476  2.9  1.4  1.1  0.2  2.2    0    0 -2.7  
+477  3.4  1.6  0.8  0.5  1.8    2    0 -1.3  
+478  1.1  0.9  0.7  0.6  2.0    8    0 -2.7  
+479  0.4  0.4  0.3  0.7  1.9    4    0  0.5  
+480  1.3  1.4  0.6  0.5  2.1   11    0 -0.8  
+481  2.0  1.6  0.7  0.4  2.4    9    0 -0.5  
+482  3.7  1.5  0.9  0.2  2.0    0    0 -2.6  
+483  3.0  1.8  0.9  0.2  2.2    0    0 -2.5  
+484  1.7  1.4  0.5  0.1  1.9   20    0  1.0  
+485  1.9  1.2  0.8  0.5  2.4    4    0  6.0  
+
+[486 rows x 22 columns]
+</pre>
+</div>
+</div>
+
 </div>
 </div>
 
