NBA practice n_init parameter

--- a/Python_Scikit-learn_NBA_unsupervised.html
+++ b/Python_Scikit-learn_NBA_unsupervised.html
@@ -11780,21 +11780,43 @@ div#notebook {
 <div class="text_cell_render border-box-sizing rendered_html">
 <p><h3 style='color: blue'>K-means clustering: NBA player</h3></p>
 <p> &emsp; K-means clustering is a type of unsupervised learning, which is used when we have unlabeled
-data. The goal of this algorithm is to find groups in the data, with the number of groups represented by the variabled K. The algorithm works iteratively to assign each data point to one of K groups based on the features that are provided. Data points are clustered based on feature similarity.</p><p><h4 style='color: red'>Processes:</h4></p>
+data. The goal of this algorithm is to find groups in the data, with the number of groups represented by the variabled K. The algorithm works iteratively to assign each data point to one of K groups based on the features that are provided. Data points are clustered based on feature similarity.</p><h4 style='color: red'>Processes:</h4>
 <ol>
     <li>Randomly pick k centroids(sensible initial partition) from the samples</li>
     <li>Assign remaining individuals (samples) to the centroid (cluster) which they were <em>closest</em> to (by Euclidean distance)</li>
     <li>Recalculate the centroid to the <em>mean value</em> of the values of all samples in the cluster.</li>
     <li>Repeat process 2 and 3 until there are no more relocations, or reaches the tolerance or maximum of iterations that is pre-chosen by the user.</li>
-</ol><p><h4 style='color: red'>Results:</h4></p>
+</ol>
+
+<h4 style='color: red'>Results:</h4>
 <ol>
     <li>The centroids of the K clusters, which can be used to label data</li>
     <li>Labels for the training data (each data point is assigned to a single cluster)</li>
-</ol><p><h5>Reference:</h5></p>
+</ol>
+
+<h4 style='color: red'>Confusing KMeans parameter:</h4><table align='left' style='margin-bottom: 10px'>
+    <tr style='border: 1px solid black'>
+        <th style='text-align: left; border-right: 1px solid black'>max_iter</th>
+        <td style='text-align: left'>
+           Maximum number of iterations of the K-means algorithm for a single run. (int, default: 300)
+        </td>
+    </tr>
+    <tr style='border: 1px solid black'>
+        <th style='text-align: left; border-right: 1px solid black'>n_init</th>
+        <td style='text-align: left'>
+           Number of time the k-means algorithm will be run with different centroid seeds. The final results will be the best output of n_init consecutive runs in terms of inertia. (int, default: 10)
+        </td>
+    </tr>
+</table><p><h5>Example:</h5></p>
+<p>With <mark>max_inter=300</mark> and <mark>n_init=15</mark>, kmeans will choose initial centroids 15 times, and each run will use up to 300 iterations. The best out of those 10 runs will be the final result.</p>
+<p>The centroids are chosen by weighted probability where the probability is propotional to <mark>D(x)^2</mark>  (the distance between new dat a point which is the candidate of new centroid and the nearest centroid that has already been chosen)</p><p><h5>Reference:</h5></p>
 <ol>
     <li><a href='http://mnemstudio.org/clustering-k-means-example-1.htm'>k-Means: Step-By-Step</li>
     <li><a href='https://www.datascience.com/blog/introduction-to-k-means-clustering-algorithm-learn-data-science-tutorials'>Introduction to K-means Clusting</a></li>
     <li><a href='https://www.naftaliharris.com/blog/visualizing-k-means-clustering/'>Visualizing K-Means Clustering</a></li>
+    <li><a href='https://stackoverflow.com/questions/5466323/how-exactly-does-k-means-work'>How exactly does k-means++ work?</a></li>
+    <li><a href='https://stats.stackexchange.com/questions/246061/what-are-the-advantages-of-the-pre-defined-initial-centroids-in-clustering'>What are the advantages of the pre-defined initial centroids in clustering?</a></li>
+    <li><a href='https://stackoverflow.com/questions/40895697/sklearn-kmeans-parameter-confusion'>Sklearn Kmeans paremeter confusion?</a></li>
 </ol>
 </div>
 </div>
@@ -12117,7 +12139,7 @@ dtype: float64
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[8]:</div>
+<div class="prompt input_prompt">In&nbsp;[7]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="c1">#Normal Kmeans method</span>
@@ -12126,7 +12148,7 @@ dtype: float64
 <span class="n">y_km</span> <span class="o">=</span> <span class="n">km</span><span class="o">.</span><span class="n">fit</span><span class="p">(</span><span class="n">X_train_std</span><span class="p">)</span>
 <span class="n">y_km</span><span class="o">.</span><span class="n">predict</span><span class="p">(</span><span class="n">X_train_std</span><span class="p">)</span>
 <span class="n">y_2_km</span> <span class="o">=</span> <span class="n">km</span><span class="o">.</span><span class="n">fit_predict</span><span class="p">(</span><span class="n">X_train_std</span><span class="p">)</span>
-<span class="nb">print</span><span class="p">(</span><span class="nb">type</span><span class="p">(</span><span class="n">y_km</span><span class="p">))</span>
+<span class="nb">print</span><span class="p">(</span><span class="n">y_km</span><span class="o">.</span><span class="n">labels_</span><span class="p">)</span>
 <span class="nb">print</span><span class="p">(</span><span class="n">y_2_km</span><span class="p">)</span>
 </pre></div>
 
@@ -12142,7 +12164,20 @@ dtype: float64
 <div class="prompt"></div>
 
 <div class="output_subarea output_stream output_stdout output_text">
-<pre>&lt;class &#39;sklearn.cluster.k_means_.KMeans&#39;&gt;
+<pre>[1 1 0 1 1 0 1 0 1 0 1 1 0 0 1 0 1 0 1 2 0 0 0 0 1 2 1 1 2 1 0 1 1 1 0 0 0
+ 1 1 1 1 0 2 1 1 1 0 1 2 1 1 0 0 0 1 1 1 1 2 1 1 0 1 2 0 1 1 0 2 1 0 1 1 1
+ 1 1 2 1 0 0 1 1 0 0 1 0 1 1 1 2 1 1 2 0 0 1 1 0 1 0 1 0 1 1 1 2 1 1 2 2 0
+ 1 1 1 2 1 0 0 1 0 1 2 1 0 1 1 0 0 0 1 1 1 1 2 2 0 2 0 1 1 0 1 0 0 2 0 0 0
+ 0 0 1 0 0 1 1 0 1 1 1 0 2 1 2 2 0 0 1 0 2 1 1 1 0 0 1 1 2 0 0 1 0 0 0 0 1
+ 2 0 0 1 1 0 0 0 0 2 0 1 1 1 0 1 1 1 1 1 1 1 1 1 0 2 1 1 0 0 1 0 2 0 0 0 0
+ 0 1 1 1 2 1 0 1 1 2 1 0 1 0 1 1 0 0 1 1 1 1 1 1 1 0 2 1 0 1 0 1 0 0 0 1 2
+ 2 1 0 0 2 0 0 0 2 2 1 1 0 2 0 1 1 2 1 0 2 0 1 1 2 2 1 1 1 1 0 1 1 2 1 0 1
+ 0 1 1 0 1 0 1 1 1 0 2 1 0 0 1 0 0 1 1 0 0 0 1 0 0 0 0 0 1 1 1 0 0 1 0 2 1
+ 1 1 1 1 1 1 1 0 0 2 0 0 0 1 0 2 1 1 0 2 0 2 1 0 1 1 1 1 0 0 1 1 1 0 1 0 0
+ 0 2 2 1 1 1 1 1 1 0 1 1 1 1 1 0 1 0 1 1 0 2 0 0 0 0 1 1 0 1 1 2 2 2 0 1 1
+ 1 1 0 1 0 0 0 1 1 1 0 1 0 0 0 0 1 1 2 1 1 0 0 0 0 0 1 0 0 1 0 0 1 1 1 0 0
+ 1 0 1 0 1 1 0 0 0 1 0 0 1 1 0 1 1 0 1 0 1 1 0 0 1 1 0 0 1 0 1 1 0 0 0 1 0
+ 0 0 0 0 0]
 [1 1 0 1 1 0 1 0 1 0 1 1 0 0 1 0 1 0 1 2 0 0 0 0 1 2 1 1 2 1 0 1 1 1 0 0 0
  1 1 1 1 0 2 1 1 1 0 1 2 1 1 0 0 0 1 1 1 1 2 1 1 0 1 2 0 1 1 0 2 1 0 1 1 1
  1 1 2 1 0 0 1 1 0 0 1 0 1 1 1 2 1 1 2 0 0 1 1 0 1 0 1 0 1 1 1 2 1 1 2 2 0
