--- a/Python_Scikit-learn_NBA_unsupervised.html
+++ b/Python_Scikit-learn_NBA_unsupervised.html
@@ -11836,12 +11836,14 @@ metrics and distance computations</p><p style='color: blue'>sklearn.metrics.<b>s
 <p><mark>scipy.spatial.distance.squareform:</mark> Converts a vector-form distance vector (pdist) to a square-form distance matrix, and vice-versa.</p><p><h5>Reference:</h5></p>
 <p><a href='https://stackoverflow.com/questions/32946241/scipy-pdist-on-a-pandas-dataframe'>scipy pdist() on a pandas DataFrame</a></p>
 <p><a href='https://joernhees.de/blog/2015/08/26/scipy-hierarchical-clustering-and-dendrogram-tutorial/'>Scipy Hierarchical Clustering and Dendrogram Tutorial</a></p>
+<p><a href='https://stackoverflow.com/questions/37712465/what-is-the-meaning-of-the-return-values-of-the-scipy-cluster-hierarchy-linkage'>What is the meaning of the return values of the scipy.cluster.hierarchy.linkage?</a></p>
+<p><a href='https://stackoverflow.com/questions/36847022/what-numbers-that-i-can-put-in-numpy-random-seed'>What numbers that I can put in numpy.random.seed()?</a></p>
 </div>
 </div>
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[24]:</div>
+<div class="prompt input_prompt">In&nbsp;[1]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="c1"># import packages</span>
@@ -12232,34 +12234,34 @@ dtype: float64
 <div class="prompt"></div>
 
 <div class="output_subarea output_stream output_stdout output_text">
-<pre>[0 0 2 0 0 2 0 2 0 2 0 0 2 2 0 2 0 2 0 1 2 2 2 2 0 1 0 0 1 0 2 0 0 0 0 2 2
- 0 0 0 0 2 1 0 0 0 2 0 1 0 0 2 2 2 0 0 0 0 1 0 0 2 0 1 2 0 0 2 1 0 2 0 0 0
- 0 0 1 0 2 2 0 0 2 2 0 2 0 0 0 1 0 0 1 2 2 0 0 2 0 2 0 2 0 0 0 1 0 0 1 1 2
- 0 0 0 1 0 2 2 0 2 0 1 0 2 0 0 2 2 2 0 0 0 0 1 1 2 1 2 2 2 2 0 2 2 1 2 2 2
- 2 2 0 2 2 0 0 2 0 0 0 2 1 0 1 1 2 2 0 2 1 0 0 0 2 2 0 0 1 2 2 0 2 2 2 2 0
- 1 2 2 0 0 2 2 2 2 1 2 0 0 0 2 0 0 0 0 0 0 0 0 0 2 1 0 0 2 2 0 2 1 2 2 2 2
- 2 0 0 0 1 0 2 0 0 1 0 2 0 2 0 0 2 2 0 0 0 0 0 0 0 2 1 0 2 0 2 0 2 2 2 0 1
- 1 0 2 2 1 2 2 2 1 1 0 0 2 1 2 0 0 1 0 2 1 2 0 0 1 1 0 0 0 0 2 0 0 1 0 2 0
- 2 0 0 2 0 2 0 0 0 2 1 0 2 2 0 2 2 0 0 2 2 2 0 2 2 2 2 2 0 0 0 2 2 0 2 1 0
- 0 0 0 0 0 0 0 2 2 2 2 2 2 0 2 1 0 0 2 1 2 1 0 2 0 0 0 0 2 2 0 0 0 2 0 2 2
- 2 1 1 0 0 0 0 0 0 2 0 0 0 0 0 2 0 2 0 0 2 1 2 2 2 2 0 0 2 0 0 1 1 1 2 0 0
- 0 0 2 0 2 2 2 0 0 0 2 0 2 2 2 2 0 0 1 0 0 2 2 2 2 2 0 2 2 0 2 2 0 0 0 2 2
- 0 2 0 2 0 0 2 2 2 0 2 2 0 0 2 0 0 2 0 2 0 0 2 2 0 0 2 2 0 2 0 0 2 2 2 0 2
- 2 2 2 2 2]
-[0 0 2 0 0 2 0 2 0 2 0 0 2 2 0 2 0 2 0 1 2 2 2 2 0 1 0 0 1 0 2 0 0 0 0 2 2
- 0 0 0 0 2 1 0 0 0 2 0 1 0 0 2 2 2 0 0 0 0 1 0 0 2 0 1 2 0 0 2 1 0 2 0 0 0
- 0 0 1 0 2 2 0 0 2 2 0 2 0 0 0 1 0 0 1 2 2 0 0 2 0 2 0 2 0 0 0 1 0 0 1 1 2
- 0 0 0 1 0 2 2 0 2 0 1 0 2 0 0 2 2 2 0 0 0 0 1 1 2 1 2 2 2 2 0 2 2 1 2 2 2
- 2 2 0 2 2 0 0 2 0 0 0 2 1 0 1 1 2 2 0 2 1 0 0 0 2 2 0 0 1 2 2 0 2 2 2 2 0
- 1 2 2 0 0 2 2 2 2 1 2 0 0 0 2 0 0 0 0 0 0 0 0 0 2 1 0 0 2 2 0 2 1 2 2 2 2
- 2 0 0 0 1 0 2 0 0 1 0 2 0 2 0 0 2 2 0 0 0 0 0 0 0 2 1 0 2 0 2 0 2 2 2 0 1
- 1 0 2 2 1 2 2 2 1 1 0 0 2 1 2 0 0 1 0 2 1 2 0 0 1 1 0 0 0 0 2 0 0 1 0 2 0
- 2 0 0 2 0 2 0 0 0 2 1 0 2 2 0 2 2 0 0 2 2 2 0 2 2 2 2 2 0 0 0 2 2 0 2 1 0
- 0 0 0 0 0 0 0 2 2 2 2 2 2 0 2 1 0 0 2 1 2 1 0 2 0 0 0 0 2 2 0 0 0 2 0 2 2
- 2 1 1 0 0 0 0 0 0 2 0 0 0 0 0 2 0 2 0 0 2 1 2 2 2 2 0 0 2 0 0 1 1 1 2 0 0
- 0 0 2 0 2 2 2 0 0 0 2 0 2 2 2 2 0 0 1 0 0 2 2 2 2 2 0 2 2 0 2 2 0 0 0 2 2
- 0 2 0 2 0 0 2 2 2 0 2 2 0 0 2 0 0 2 0 2 0 0 2 2 0 0 2 2 0 2 0 0 2 2 2 0 2
- 2 2 2 2 2]
+<pre>[0 0 1 0 0 1 0 1 0 1 0 0 1 1 0 1 0 1 0 2 1 1 1 1 0 2 0 0 2 0 1 0 0 0 0 1 1
+ 0 0 0 0 1 2 0 0 0 1 0 2 0 0 1 1 1 0 0 0 0 2 0 0 1 0 2 1 0 0 1 2 0 1 0 0 0
+ 0 0 2 0 1 1 0 0 1 1 0 1 0 0 0 2 0 0 2 1 1 0 0 1 0 1 0 1 0 0 0 2 0 0 2 2 1
+ 0 0 0 2 0 1 1 0 1 0 2 0 1 0 0 1 1 1 0 0 0 0 2 2 1 2 1 0 0 1 0 1 1 2 1 1 1
+ 1 1 0 1 1 0 0 1 0 0 0 1 2 0 2 2 1 1 0 1 2 0 0 0 1 1 0 0 2 1 1 0 1 1 1 1 0
+ 2 1 1 0 0 1 1 1 1 2 1 0 0 0 1 0 0 0 0 0 0 0 0 0 1 2 0 0 1 1 0 1 2 1 1 1 1
+ 1 0 0 0 2 0 1 0 0 2 0 1 0 1 0 0 1 1 0 0 0 0 0 0 0 1 2 0 1 0 1 0 1 1 1 0 2
+ 2 0 1 1 2 1 1 1 2 2 0 0 1 2 1 0 0 2 0 1 2 1 0 0 2 2 0 0 0 0 1 0 0 2 0 1 0
+ 1 0 0 1 0 1 0 0 0 1 2 0 1 1 0 1 1 0 0 1 1 1 0 1 1 1 1 1 0 0 0 1 1 0 1 2 0
+ 0 0 0 0 0 0 0 1 1 2 1 1 1 0 1 2 0 0 1 2 1 2 0 1 0 0 0 0 1 1 0 0 0 1 0 1 1
+ 1 2 2 0 0 0 0 0 0 1 0 0 0 0 0 1 0 1 0 0 1 2 1 1 1 1 0 0 1 0 0 2 2 2 1 0 0
+ 0 0 1 0 1 1 1 0 0 0 1 0 1 1 1 1 0 0 2 0 0 1 1 1 1 1 0 1 1 0 1 1 0 0 0 1 1
+ 0 1 0 1 0 0 1 1 1 0 1 1 0 0 1 0 0 1 0 1 0 0 1 1 0 0 1 1 0 1 0 0 1 1 1 0 1
+ 1 1 1 1 1]
+[0 0 1 0 0 1 0 1 0 1 0 0 1 1 0 1 0 1 0 2 1 1 1 1 0 2 0 0 2 0 1 0 0 0 0 1 1
+ 0 0 0 0 1 2 0 0 0 1 0 2 0 0 1 1 1 0 0 0 0 2 0 0 1 0 2 1 0 0 1 2 0 1 0 0 0
+ 0 0 2 0 1 1 0 0 1 1 0 1 0 0 0 2 0 0 2 1 1 0 0 1 0 1 0 1 0 0 0 2 0 0 2 2 1
+ 0 0 0 2 0 1 1 0 1 0 2 0 1 0 0 1 1 1 0 0 0 0 2 2 1 2 1 0 0 1 0 1 1 2 1 1 1
+ 1 1 0 1 1 0 0 1 0 0 0 1 2 0 2 2 1 1 0 1 2 0 0 0 1 1 0 0 2 1 1 0 1 1 1 1 0
+ 2 1 1 0 0 1 1 1 1 2 1 0 0 0 1 0 0 0 0 0 0 0 0 0 1 2 0 0 1 1 0 1 2 1 1 1 1
+ 1 0 0 0 2 0 1 0 0 2 0 1 0 1 0 0 1 1 0 0 0 0 0 0 0 1 2 0 1 0 1 0 1 1 1 0 2
+ 2 0 1 1 2 1 1 1 2 2 0 0 1 2 1 0 0 2 0 1 2 1 0 0 2 2 0 0 0 0 1 0 0 2 0 1 0
+ 1 0 0 1 0 1 0 0 0 1 2 0 1 1 0 1 1 0 0 1 1 1 0 1 1 1 1 1 0 0 0 1 1 0 1 2 0
+ 0 0 0 0 0 0 0 1 1 2 1 1 1 0 1 2 0 0 1 2 1 2 0 1 0 0 0 0 1 1 0 0 0 1 0 1 1
+ 1 2 2 0 0 0 0 0 0 1 0 0 0 0 0 1 0 1 0 0 1 2 1 1 1 1 0 0 1 0 0 2 2 2 1 0 0
+ 0 0 1 0 1 1 1 0 0 0 1 0 1 1 1 1 0 0 2 0 0 1 1 1 1 1 0 1 1 0 1 1 0 0 0 1 1
+ 0 1 0 1 0 0 1 1 1 0 1 1 0 0 1 0 0 1 0 1 0 0 1 1 0 0 1 1 0 1 0 0 1 1 1 0 1
+ 1 1 1 1 1]
 </pre>
 </div>
 </div>
@@ -12270,7 +12272,7 @@ dtype: float64
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[29]:</div>
+<div class="prompt input_prompt">In&nbsp;[6]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="c1">#Hierarchical clustering on a distance matrix</span>
@@ -12290,7 +12292,7 @@ dtype: float64
 
 
 <div class="output_area">
-<div class="prompt output_prompt">Out[29]:</div>
+<div class="prompt output_prompt">Out[6]:</div>
 
 
 <div class="output_html rendered_html output_subarea output_execute_result">
@@ -13806,6 +13808,40 @@ dtype: float64
 </div>
 </div>
 
+</div>
+
+</div>
+</div>
+
+</div>
+<div class="cell border-box-sizing code_cell rendered">
+<div class="input">
+<div class="prompt input_prompt">In&nbsp;[21]:</div>
+<div class="inner_cell">
+    <div class="input_area">
+<div class=" highlight hl-ipython3"><pre><span></span><span class="n">a</span> <span class="o">=</span> <span class="n">np</span><span class="o">.</span><span class="n">random</span><span class="o">.</span><span class="n">multivariate_normal</span><span class="p">([</span><span class="mi">0</span><span class="p">,</span> <span class="mi">0</span><span class="p">],</span> <span class="p">[[</span><span class="mi">1</span><span class="p">,</span><span class="mi">0</span><span class="p">],[</span><span class="mi">0</span><span class="p">,</span><span class="mi">100</span><span class="p">]],</span> <span class="mi">5</span><span class="p">)</span>
+<span class="nb">print</span><span class="p">(</span><span class="n">a</span><span class="p">)</span>
+</pre></div>
+
+</div>
+</div>
+</div>
+
+<div class="output_wrapper">
+<div class="output">
+
+
+<div class="output_area">
+<div class="prompt"></div>
+
+<div class="output_subarea output_stream output_stdout output_text">
+<pre>[[ -0.82737475 -23.18235809]
+ [ -1.03879472  -1.42685925]
+ [ -0.6182129    5.35646919]
+ [  0.6003344    1.11075041]
+ [ -0.5590925   16.06892693]]
+</pre>
+</div>
 </div>
 
 </div>
