--- a/Python_Scikit-learn_NBA_unsupervised.html
+++ b/Python_Scikit-learn_NBA_unsupervised.html
@@ -11835,9 +11835,22 @@ metrics and distance computations</p><p style='color: blue'>sklearn.metrics.<b>s
 <p><mark>scipy.spatial.distance.pdist:</mark> Pairwise distances between observations in n-dimentional space</p>
 <p><mark>scipy.spatial.distance.squareform:</mark> Converts a vector-form distance vector (pdist) to a square-form distance matrix, and vice-versa.</p><p><h5>Reference:</h5></p>
 <p><a href='https://stackoverflow.com/questions/32946241/scipy-pdist-on-a-pandas-dataframe'>scipy pdist() on a pandas DataFrame</a></p>
+<p><a href='https://stackoverflow.com/questions/36847022/what-numbers-that-i-can-put-in-numpy-random-seed'>What numbers that I can put in numpy.random.seed()?</a></p>
+</div>
+</div>
+</div>
+<div class="cell border-box-sizing text_cell rendered">
+<div class="prompt input_prompt">
+</div>
+<div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<p><h4 style='color: red'>scipy.cluster.hierarchy</h4></p>
+<p><em style='color: blue'>Hierarchical clustering:</em> It's a method of cluster analysis which splits(Divisive) or merges(Agglomerative) data layer by layer, and finally it will create a dendrogram based on the clustering result.</p>
+<p style='color: blue'>scipy.cluster.hierarchy.<b>linkage</b>(y, method='single', metric='euclidean')</p><p style='color: blue'>scipy.cluster.hierarchy.<b>cophenet</b>(Z, Y=None)</p><p><h5>Reference:</h5></p>
 <p><a href='https://joernhees.de/blog/2015/08/26/scipy-hierarchical-clustering-and-dendrogram-tutorial/'>Scipy Hierarchical Clustering and Dendrogram Tutorial</a></p>
 <p><a href='https://stackoverflow.com/questions/37712465/what-is-the-meaning-of-the-return-values-of-the-scipy-cluster-hierarchy-linkage'>What is the meaning of the return values of the scipy.cluster.hierarchy.linkage?</a></p>
-<p><a href='https://stackoverflow.com/questions/36847022/what-numbers-that-i-can-put-in-numpy-random-seed'>What numbers that I can put in numpy.random.seed()?</a></p>
+<p><a href='http://radio.feld.cvut.cz/matlab/toolbox/stats/cophenet.html'>Statistic Toolbox - cophenet</a></p>
+<p><a href='https://stats.stackexchange.com/questions/82326/how-to-interpret-the-dendrogram-of-a-hierarchical-cluster-analysis'>How to interpret the dendrogram of a hierarchical cluster analysis?</a></p>
 </div>
 </div>
 </div>
